--- a/master/Src/Screen1.fx.yaml
+++ b/master/Src/Screen1.fx.yaml
@@ -6,3 +6,9 @@ Screen1 As screen:
         Y: =40
         ZIndex: =1
 
+    Label1_1 As label:
+        Text: ="2024/06/27 作成"
+        X: =40
+        Y: =80
+        ZIndex: =2
+
