--- a/master/Src/Screen1.fx.yaml
+++ b/master/Src/Screen1.fx.yaml
@@ -12,3 +12,9 @@ Screen1 As screen:
         Y: =80
         ZIndex: =2
 
+    Label1_2 As label:
+        Text: ="2024/06/27 作成"
+        X: =40
+        Y: =120
+        ZIndex: =3
+
